# pl-review-sense

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: main.py
docs/: index.html
docs/research/: data-and-methodology.md
notebooks/: 01_eda_and_models.ipynb  herbert_colab.ipynb
reports/metrics/: baseline.json
reports/predictions/: baseline_test.json
src/pl_review_sense/: __init__.py  baseline.py  baseline_train.py  config.py  data.py  evaluate.py  herbert.py  report.py
tests/: test_api.py  test_baseline.py  test_data.py  test_evaluate.py  test_herbert.py  test_report.py
