[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pl-review-sense"
version = "0.1.0"
description = "Polish review sentiment: TF-IDF baseline vs HerBERT fine-tuning (PolEmo 2.0)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pandas>=2.2,<3",
    "numpy>=1.26,<3",
    "scikit-learn>=1.5,<2",
    "matplotlib>=3.9,<4",
    "seaborn>=0.13,<0.14",
    "joblib>=1.4,<2",
    # PolEmo loads through a dataset script -> needs datasets < 3 (trust_remote_code support).
    "datasets>=2.19,<3",
    "fastapi>=0.115,<1",
    "uvicorn>=0.30,<1",
    "pydantic>=2.8,<3",
]

[project.optional-dependencies]
# Heavy (~2 GB) — only for the HerBERT fine-tuning path (Colab GPU or the local CPU smoke run).
# CI does not install this; the baseline, evaluation, report and API all work without it.
transformer = [
    "torch>=2.2,<3",
    "transformers>=4.40,<5",
    "accelerate>=0.30",
    # HerBERT's tokenizer needs SentencePiece/protobuf + sacremoses.
    "sentencepiece>=0.2,<1",
    "protobuf>=4,<6",
    "sacremoses>=0.1,<1",
]
dev = [
    "pytest>=8.3,<9",
    "httpx>=0.27,<1",
    "jupyterlab>=4.2,<5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
# Put the repo root on sys.path so tests can import the top-level `api` package.
pythonpath = ["."]
filterwarnings = [
    # FastAPI TestClient / starlette-httpx deprecation — third-party, cosmetic.
    "ignore:Using `httpx` with `starlette.testclient`",
    # joblib pickling on NumPy 2.5 — third-party, cosmetic.
    "ignore:Setting the shape on a NumPy array has been deprecated",
]
